--- a/conf/deployment.yml
+++ b/conf/deployment.yml
@@ -8,7 +8,7 @@ custom:
     new_cluster:
       <<: *basic-cluster-props
       num_workers: 1
-      node_type_id: "i3.xlarge"
+      node_type_id: "Standard_D3_v2"
 
 environments:
   default:
