--- a/conf/deployment.yml
+++ b/conf/deployment.yml
@@ -25,47 +25,14 @@ environments:
                 # this call supports all standard pytest arguments
                 parameters: ["file:fuse://tests/integration", "--cov=kb_devops_proj"]
       #######################################################################################
+      #   Example workflow for dbt tests                                            #
+      #######################################################################################
+      - name: "dbt_task_manifest_test"
+        tasks:
+          - task_key: "dbt_task_manifest_test"
+            <<: *basic-static-cluster
+            dbt_task:
+                parameters: ["file:fuse:conf/tasks/dbt_task_config.json"]
+      #######################################################################################
       # this is an example job with single ETL task based on 2.1 API and wheel_task format #
       ######################################################################################
-      - name: "kb_devops_proj-sample-etl"
-        tasks:
-          - task_key: "main"
-            <<: *basic-static-cluster
-            python_wheel_task:
-              package_name: "kb_devops_proj"
-              entry_point: "etl" # take a look at the setup.py entry_points section for details on how to define an entrypoint
-              parameters: ["--conf-file", "file:fuse://conf/tasks/sample_etl_config.yml"]
-      #############################################################
-      # this is an example multitask job with notebook task       #
-      #############################################################
-      - name: "kb_devops_proj-sample-multitask"
-        job_clusters:
-          - job_cluster_key: "default"
-            <<: *basic-static-cluster
-        tasks:
-          - task_key: "etl"
-            job_cluster_key: "default"
-            spark_python_task:
-              python_file: "file://kb_devops_proj/tasks/sample_etl_task.py"
-              parameters: [ "--conf-file", "file:fuse://conf/tasks/sample_etl_config.yml" ]
-          - task_key: "ml"
-            depends_on:
-              - task_key: "etl"
-            job_cluster_key: "default"
-            python_wheel_task:
-              package_name: "kb_devops_proj"
-              entry_point: "ml"
-              parameters: [ "--conf-file", "file:fuse://conf/tasks/sample_ml_config.yml" ]
-          ###############################################################################
-          # this is an example task based on the notebook                               #
-          # Please note that first you'll need to add a Repo and commit notebook to it. #
-          ###############################################################################
-          - task_key: "notebook"
-            deployment_config:
-              no_package: true # we omit using package since code will be shipped directly from the Repo
-            depends_on:
-              - task_key: "ml"
-            job_cluster_key: "default"
-            notebook_task:
-              notebook_path: "/Repos/Staging/kb_devops_proj/notebooks/sample_notebook"
-
